@@ -2307,6 +2307,7 @@
 18) kernel: net: decrease size of skb_shared_info (prevent page allocation failure on wireless path).<br>
 19) kernel: net: packet: improve socket create/bind latency in some cases.<br>
 20) kernel: net: packet: race condition in packet_bind.<br>
+21) kernel: net: netfilter: conntrack: Only need first 4 bytes to get l4proto ports.<br>
 <br>
 <br>
 <br>
